@@ -1,22 +1,24 @@
 import io
 from setuptools import setup, find_packages
 
-long_description = '\n'.join((
-    io.open('README.rst', encoding='utf-8').read(),
-    io.open('CHANGES.txt', encoding='utf-8').read()
-))
+long_description = "\n".join(
+    (
+        io.open("README.rst", encoding="utf-8").read(),
+        io.open("CHANGES.txt", encoding="utf-8").read(),
+    )
+)
 
 setup(
-    name='more.chameleon',
-    version='0.3.dev0',
+    name="more.chameleon",
+    version="0.3.dev0",
     description="Chameleon template integration for Morepath",
     long_description=long_description,
     author="Martijn Faassen",
     author_email="faassen@startifact.com",
-    keywords='morepath chameleon',
+    keywords="morepath chameleon",
     license="BSD",
     url="http://github.com/morepath/more.chameleon",
-    namespace_packages=['more'],
+    namespace_packages=["more"],
     packages=find_packages(),
     include_package_data=True,
     zip_safe=False,
@@ -26,22 +28,15 @@ setup(
         "Environment :: Web Environment",
         "Topic :: Software Development :: Libraries :: Application Frameworks",
         "Topic :: Internet :: WWW/HTTP :: WSGI",
-        "Programming Language :: Python :: 2.7",
-        "Programming Language :: Python :: 3.3",
-        "Programming Language :: Python :: 3.4",
-        "Programming Language :: Python :: 3.5",
-        'Development Status :: 5 - Production/Stable'
+        "Programming Language :: Python :: 3.6",
+        "Programming Language :: Python :: 3.7",
+        "Programming Language :: Python :: 3.8",
+        "Programming Language :: Python :: Implementation :: CPython",
+        "Programming Language :: Python :: Implementation :: PyPy",
+        "Development Status :: 5 - Production/Stable",
     ],
-    install_requires=[
-        'setuptools',
-        'morepath >= 0.15',
-        'chameleon >= 2.20'
-    ],
+    install_requires=["setuptools", "morepath >= 0.15", "chameleon >= 2.20"],
     extras_require=dict(
-        test=[
-            'pytest >= 2.6.0',
-            'pytest-cov',
-            'WebTest'
-        ],
+        test=["pytest >= 2.6.0", "pytest-cov", "WebTest"],
     ),
 )
