@@ -14,6 +14,8 @@ CHANGES
 
 - Clean up metadata.
 
+- Update supported Python versions.
+
 
 0.2 (2016-01-23)
 ================
